Dosage 1.14 (released xx.xx.2013)

Features:
- comics: Added KeenSpot comic strips and enable ComicGenesis
  comic strips
- comics: Added CucumberQuest, DemolitionSquad, DerFlix, DogHouseDiaries, FonFlatter,
  FullFrontalNerdity, GeeksNextDoor, KickInTheHead, OrnerBoy, Ruthe.
  Closes: GH bug #15, #19

Changes:
- comics: The scraper can check a list of previous and image link
  regular expressions, not only a single one.
- comics: Continue searching for images if one image is not found.
  Closes: GH bug #18

Fixes:
- comics: Fix dilbert image naming.
  Closes: GH bug #20


Dosage 1.13 (released 11.3.2013)

Features:
- comics: Added comic strips AhoiPolloi, AxeCop, Bearmageddon, DeadWinter,
  HarkAVagrant, IAmArg, LoadingArtist, Nnewts, PHDComics, PokeyThePenguin,
  SnowFlame, WorldOfMrToast and Zwarwald.

Changes:
- cmdline: Comic lists are displayed one page at a time.
- output: HTML output embeds the images in the page and show the page URLs.
- output: The --output option can be given multiple times.

Fixes:
- cmdline: Catch error when piping output to another
  program or file under Windows.
  Closes: GH bug #13
- cmdline: Catch error when multiple comics match.
  Closes: GH bug #16
- comics: Retry download on empty content to reduce empty file errors.
- comics: Don't save thumbnails in LookingForGroup
  Closes: GH bug #17


Dosage 1.12 (released 4.3.2013)

Features:
- comics: Added comic strips AlphaLuna, AlphaLunaSpanish, BrentalFloss
  BrentalFlossFit, BrentalFlossGuest, DangerouslyChloe, MagickChicks,
  MenageA3, Namesake, ShadowGirls, StickyDillyBuns.

Fixes:
- cmdline: Fix option parsing for -l, --singlelist and --version.
  Closes: GH bug #10
- comics: Ensure the file is written to disk on save and detect
  empty files as an error.
  Closes: GH bug #11


Dosage 1.11 (released 1.3.2013)

Features:
- comics: Added comic strips Caggage, ManlyGuysDoingManlyThings,
  SandraAndWoo and SupernormalStep.

Changes: