@@ -3,8 +3,9 @@ Dosage 1.14 (released xx.xx.2013)
 Features:
 - comics: Added KeenSpot comic strips and enable ComicGenesis
   comic strips
-- comics: Added CucumberQuest, DemolitionSquad, DerFlix, DogHouseDiaries, FonFlatter,
-  FullFrontalNerdity, GeeksNextDoor, KickInTheHead, OrnerBoy, Ruthe.
+- comics: Added CucumberQuest, DemolitionSquad, DerFlix, DogHouseDiaries,
+  FonFlatter, FullFrontalNerdity, GeeksNextDoor, KickInTheHead, OrnerBoy,
+  Ruthe, SandraAndWooGerman.
   Closes: GH bug #15, #19
 
 Changes:
